# rules_dotnet_repro

./: BUILD.bazel  UnsafeTest.cs  WORKSPACE  nuget2config.json
